feat: auth response dto